--- a/form.html
+++ b/form.html
@@ -8,42 +8,44 @@
   <body>
     <div class="container">
       <h1>Pre-paid Parking Form</h1>
+      <h5>* denotes required information</h3>
+      <div class='errorDiv' id='error-msg'></div>  
       <form id="parking-form">
         <div class="input-field" id="name-field">
-          <label for="name">Name</label>
-          <input id="name" type="text">
+          <label for="name">Name*</label>
+          <input id="name" type="text" required>
         </div>
         <div class="input-field" id="car-field">
-          <label for="car-year">Car</label>
+          <label for="car-year">Car*</label>
           <div class="input-group">
-            <input id="car-year" type="text" placeholder="Year">
-            <input id="car-make" type="text" placeholder="Make">
-            <input id="car-model" type="text" placeholder="Model">
+            <input id="car-year" type="number" placeholder="Year" min="1990" required>
+            <input id="car-make" type="text" placeholder="Make" required>
+            <input id="car-model" type="text" placeholder="Model" required>
           </div>
         </div>
         <div class="input-field" id="start-date-field">
-          <label for="start-date">Date parking</label>
-          <input id="start-date" type="date">
+          <label for="start-date">Date parking*</label>
+          <input id="start-date" type="date" required>
         </div>
         <div class="input-field" id="days-field">
-          <label for="days">Number of days</label>
-          <input id="days" type="text">
+          <label for="days">Number of days*</label>
+          <input id="days" type="number" min='1' max='30' required>
         </div>
         <div class="input-field" id="credit-card-field">
-          <label for="credit-card">Credit Card</label>
-          <input id="credit-card" type="text">
+          <label for="credit-card">Credit Card*</label>
+          <input id="credit-card" type="number" required>
         </div>
         <div class="row">
           <div class="col">
             <div class="input-field" id="cvv-field">
-              <label for="cvv">CVV</label>
-              <input id="cvv" type="text">
+              <label for="cvv">CVV* expected format is ###</label>
+              <input id="cvv" type="number" placeholder='###' pattern="[0-9]{3}" required>
             </div>
           </div>
           <div class="col">
             <div class="input-field" id="expiration-field">
-              <label for="expiration">Expiration</label>
-              <input id="expiration" type="text" placeholder="MM/YY">
+              <label for="expiration">Expiration*</label>
+              <input id="expiration" type="text" placeholder="MM/YY" required>
             </div>
           </div>
         </div>
