--- a/form.html
+++ b/form.html
@@ -25,11 +25,11 @@
         </div>
         <div class="input-field" id="start-date-field">
           <label for="start-date">Date parking*</label>
-          <input id="start-date" type="date" required>
+          <input class='start-date' id="start-date" type="date" required>
         </div>
         <div class="input-field" id="days-field">
           <label for="days">Number of days*</label>
-          <input id="days" type="number" min='1' max='30' required>
+          <input class='days'  id="days" type="number" min='1' max='30' required>
         </div>
         <div class="input-field" id="credit-card-field">
           <label for="credit-card">Credit Card*</label>
@@ -39,7 +39,7 @@
           <div class="col">
             <div class="input-field" id="cvv-field">
               <label for="cvv">CVV* expected format is ###</label>
-              <input id="cvv" type="number" placeholder='###' pattern="[0-9]{3}" required>
+              <input id="cvv" type="text" placeholder='###' pattern="[0-9]{3}" required>
             </div>
           </div>
           <div class="col">
