--- a/form.html
+++ b/form.html
@@ -18,7 +18,7 @@
         <div class="input-field" id="car-field">
           <label for="car-year">Car*</label>
           <div class="input-group">
-            <input id="car-year" type="number" placeholder="Year" min="1990" required>
+            <input id="car-year" type="number" placeholder="Year" min="1990" max="2020" required>
             <input id="car-make" type="text" placeholder="Make" required>
             <input id="car-model" type="text" placeholder="Model" required>
           </div>
@@ -45,7 +45,7 @@
           <div class="col">
             <div class="input-field" id="expiration-field">
               <label for="expiration">Expiration*</label>
-              <input id="expiration" type="text" placeholder="MM/YY" required>
+              <input id="expiration" type="text" placeholder="MM/YY" pattern="[0-9]{2}/[0-9]{2}" required>
             </div>
           </div>
         </div>
